<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout_admin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start">

        <include
            layout="@layout/app_bar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.v4.widget.DrawerLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_result"
        android:layout_marginTop="70dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textCaution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"

            android:background="@drawable/outline"
            android:text="@string/caution_message_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/layout_result"
            android:fadeScrollbars="true">

            <LinearLayout
                android:id="@+id/layout_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textCaution"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnUpdateFK"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    android:text="@string/btn_label_update_fk"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <Button
                    android:id="@+id/btnRunSP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/btnUpdateFW"
                    android:text="@string/btn_label_run_self_protection"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <Button
                    android:id="@+id/btnCheckSPLog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_label_check_self_protection_log"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <Button
                    android:id="@+id/btnAuthenMA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_label_mutual_authentication"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <Button
                    android:id="@+id/btnUpdateFW"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_label_update_fw"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <Button
                    android:id="@+id/btnDownload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_label_download_device"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <Button
                    android:id="@+id/btnDeviceFactoryReset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_label_device_factory_reset"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <Button
                    android:id="@+id/btnIPSetting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_label_ip_settings"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <Button
                    android:id="@+id/btnPwdChange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_label_pwd_settings"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:orientation="vertical"
        android:paddingBottom="15dp">

        <TextView
            android:id="@+id/textResultTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/title_reuslt_text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textResult"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignStart="@+id/textResultTitle"
            android:layout_below="@+id/textResultTitle"
            android:background="@drawable/outline"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

</RelativeLayout>