<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/download_dialog_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="11dp"
    android:paddingRight="11dp"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/tx_buisness_num"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/editBuisnessNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginTop="11dp"
            android:hint="@string/edtx_input_buisness_num_hint"
            android:inputType="phone"
            android:lines="1"
            android:maxLength="10"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/tx_store_info"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/editStoreInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginTop="11dp"
            android:hint="@string/edtx_input_store_info_hint"
            android:inputType="text"
            android:maxLength="20"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/tx_teminal_id"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/editTerminalId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginTop="11dp"
            android:hint="@string/edtx_input_teminal_id_hint"
            android:inputType="text"
            android:maxLength="10"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/tx_serial_num"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/editSerialNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginTop="11dp"
            android:hint="@string/edtx_input_serial_num_hint"
            android:inputType="text"
            android:maxLength="10"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            />
    </LinearLayout>

</LinearLayout>
