<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ipsettings_dialog_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="11dp"
    android:paddingRight="11dp"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/tx_ip"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/editIP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginTop="11dp"
            android:hint="@string/edtx_input_ip_hint"
            android:inputType="number|numberDecimal"
            android:digits="0123456789."
            android:lines="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/tx_port"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/editPort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginTop="11dp"
            android:hint="@string/edtx_input_port_hint"
            android:inputType="number|numberDecimal"
            android:maxLength="5"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />
    </LinearLayout>
</LinearLayout>
