<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textResultMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_label_result_msg"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_layout_height"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/btnPrint"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="?android:attr/selectableItemBackground"
            android:textAllCaps="false"
            android:text="@string/btn_label_btn_print" />
        <Button
            android:id="@+id/btnOk"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="?android:attr/selectableItemBackground"
            android:textAllCaps="false"
            android:text="@string/btn_label_ok" />

    </LinearLayout>

</RelativeLayout>